# git-commit-messenger

./: .gitignore  Cargo.toml  README.md  config.yml
src/: config.rs  main.rs
src/config/: generate.rs
src/data/: conventional_types.json
src/lib/: lib.rs
src/lib/config/: generate.rs  mod.rs
src/lib/error/: mod.rs
src/lib/prompt/: conventional_type.rs  gitmoji.rs  message_builder.rs
src/prompt/: conventional_type.rs  gitmoji.rs  message_builder.rs  mod.rs
src/utils/: git.rs
