[package]
name = "git-commit-messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.5"
home = "0.5.3"
inquire = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
yaml-rust = "0.4.5"
