[package]
name = "git-commit-messenger"
version = "0.1.0"
edition = "2021"

[lib]
name = "gcm"
path = "src/lib/lib.rs"

[dependencies]
duct = "0.13.5"
home = "0.5.3"
inquire = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
termination = "0.1.2"
thiserror = "1.0.37"
yaml-rust = "0.4.5"

